--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
             /* to text color white */
             color: white;
         }
-
+        /* this is written just to check the git
+        lorem45 */
         /* table styling */
         table,
         th,
